# RT_SLAM_qorix_incubDeployment

./: Makefile  README.md  docker-compose.yml  websocket_api.md
Reports/: RT_SLAM_AVOC.docx  RT_SLAM_AVOC.xlsx
Reports/Design_Doc/: RT_SLAM_AVOC_-_Design_Document.docx  RT_SLAM_AVOC_-_Design_Document_figures.json
Reports/Requirements/Functional_Cluster_Safety/: FTS.docx
Reports/Requirements/Manuals/: User_Manual.docx
Reports/Requirements/Requirements/: FTR.docx  Requirements.docx
backend/: Dockerfile.backend  requirements.txt  startup.sh
backend/api_server/: main.py
backend/data_streamer/: main.py  vehicle_pose.py
backend/dev_scripts/: mock_backend.py
backend/install/: local_setup.sh  setup.sh
backend/install/ros2_nodes/share/ros2_nodes/: package.bash  package.zsh
backend/ros2_nodes/ros2_nodes/slam_node/: CMakeLists.txt  package.xml
backend/ros2_nodes/ros2_nodes/slam_node/src/: slam_logic.cpp
docs/: rest_api.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: MapView.js  SystemHealthPanel.js
frontend/src/services/: apiService.js  websocketService.js
test/: test_frontend.html
